[gd_scene load_steps=16 format=3 uid="uid://chg3cbacfnu20"]

[ext_resource type="Texture2D" uid="uid://cynmlvwhdo84o" path="res://Assets/images/Square.png" id="1_1cf1i"]
[ext_resource type="Script" path="res://Scripts/card_editor.gd" id="1_m6mbc"]
[ext_resource type="Script" path="res://Scripts/card_editor_scene_manager.gd" id="2_06cxi"]
[ext_resource type="Texture2D" uid="uid://mhucvphj4i4e" path="res://Assets/images/Square2.png" id="2_jfs04"]
[ext_resource type="Theme" uid="uid://cs64m8jorbkrh" path="res://Assets/themes/button big_theme.tres" id="3_icw2p"]
[ext_resource type="PackedScene" uid="uid://yue7hl0l0upn" path="res://Scenes/tag.tscn" id="3_rorqg"]
[ext_resource type="FontFile" uid="uid://d2voppd6fmkh6" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="4_nxk2h"]
[ext_resource type="Texture2D" uid="uid://bmvvhihmid8iw" path="res://Assets/images/card slot.png" id="6_hyxf0"]
[ext_resource type="FontFile" uid="uid://donxec21iqi2o" path="res://Assets/fonts/PixelOperator8.ttf" id="7_mplpp"]
[ext_resource type="PackedScene" uid="uid://4gv81wu465g1" path="res://Scenes/card_collection.tscn" id="10_i4r5u"]

[sub_resource type="Gradient" id="Gradient_7c41k"]
colors = PackedColorArray(0.172549, 0.172549, 0.172549, 1, 0.121569, 0.121569, 0.121569, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_c3ssm"]
gradient = SubResource("Gradient_7c41k")
fill_from = Vector2(1, 0)
fill_to = Vector2(1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_omrvp"]
texture = ExtResource("6_hyxf0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hvstn"]
texture = ExtResource("6_hyxf0")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0n8rc"]
texture = ExtResource("6_hyxf0")

[node name="CardEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_m6mbc")

[node name="CardEditorSceneManager" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
mouse_filter = 2
script = ExtResource("2_06cxi")

[node name="EditArea" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 1728.0
offset_bottom = 912.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_c3ssm")

[node name="ColorRect2" type="ColorRect" parent="EditArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.00489983, 0.00489983, 0.00489982, 1)

[node name="ColorRect3" type="ColorRect" parent="EditArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 16.0
offset_right = -760.0
offset_bottom = -400.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="ColorRect4" type="ColorRect" parent="EditArea"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 760.0
offset_top = 504.0
offset_right = -760.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="Options" type="Control" parent="EditArea"]
layout_mode = 1
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TagArea" type="NinePatchRect" parent="EditArea/Options"]
self_modulate = Color(0.172549, 0.172549, 0.172549, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 144.0
offset_top = 72.0
offset_right = -136.0
offset_bottom = -592.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_1cf1i")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 11
patch_margin_top = 30
patch_margin_right = 17
patch_margin_bottom = 17

[node name="NinePatchRect2" type="NinePatchRect" parent="EditArea/Options/TagArea"]
self_modulate = Color(0.0588235, 0.0588235, 0.0588235, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 10.0
offset_right = -8.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jfs04")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 11
patch_margin_top = 30
patch_margin_right = 17
patch_margin_bottom = 17

[node name="HBoxContainer" type="HBoxContainer" parent="EditArea/Options/TagArea/NinePatchRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_right = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16

[node name="tag" parent="EditArea/Options/TagArea/NinePatchRect2/HBoxContainer" instance=ExtResource("3_rorqg")]
layout_mode = 2

[node name="tag2" parent="EditArea/Options/TagArea/NinePatchRect2/HBoxContainer" instance=ExtResource("3_rorqg")]
layout_mode = 2

[node name="tag3" parent="EditArea/Options/TagArea/NinePatchRect2/HBoxContainer" instance=ExtResource("3_rorqg")]
layout_mode = 2

[node name="tag4" parent="EditArea/Options/TagArea/NinePatchRect2/HBoxContainer" instance=ExtResource("3_rorqg")]
layout_mode = 2

[node name="tag5" parent="EditArea/Options/TagArea/NinePatchRect2/HBoxContainer" instance=ExtResource("3_rorqg")]
layout_mode = 2

[node name="TrashButton" type="Button" parent="EditArea/Options"]
self_modulate = Color(0.18, 0.18, 0.18, 1)
layout_mode = 0
offset_left = 72.0
offset_top = 568.0
offset_right = 440.0
offset_bottom = 726.0
theme = ExtResource("3_icw2p")

[node name="Label" type="Label" parent="EditArea/Options/TrashButton"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.962
offset_bottom = 0.00398254
theme_override_fonts/font = ExtResource("4_nxk2h")
theme_override_font_sizes/font_size = 24
text = "Trash Card

5$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="EditArea"]
layout_mode = 1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Name" type="MarginContainer" parent="EditArea/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 200.0
offset_top = 56.0
offset_right = -200.0
offset_bottom = 120.0
grow_horizontal = 2

[node name="NinePatchRect" type="NinePatchRect" parent="EditArea/Control/Name"]
self_modulate = Color(0.174028, 0.174028, 0.174028, 1)
layout_mode = 2
texture = ExtResource("1_1cf1i")
patch_margin_left = 13
patch_margin_top = 10
patch_margin_right = 11
patch_margin_bottom = 19

[node name="MarginContainer" type="MarginContainer" parent="EditArea/Control/Name"]
layout_mode = 2
theme_override_constants/margin_bottom = 8

[node name="NameLabel" type="Label" parent="EditArea/Control/Name/MarginContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("4_nxk2h")
theme_override_font_sizes/font_size = 24
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="EditArea/Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 144.0
offset_top = 184.0
offset_right = -144.0
offset_bottom = 272.0
grow_horizontal = 2
theme_override_constants/margin_top = 0

[node name="Description" type="NinePatchRect" parent="EditArea/Control/MarginContainer"]
self_modulate = Color(0.174028, 0.174028, 0.174028, 1)
layout_mode = 2
texture = ExtResource("1_1cf1i")
patch_margin_left = 13
patch_margin_top = 10
patch_margin_right = 11
patch_margin_bottom = 19

[node name="Description" type="Label" parent="EditArea/Control/MarginContainer/Description"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("4_nxk2h")
theme_override_font_sizes/font_size = 16
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="EditArea/Control/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="NinePatchRect" type="NinePatchRect" parent="EditArea/Control/MarginContainer/MarginContainer"]
self_modulate = Color(0.0588235, 0.0588235, 0.0588235, 1)
layout_mode = 2
texture = ExtResource("2_jfs04")
patch_margin_left = 18
patch_margin_top = 19
patch_margin_right = 13
patch_margin_bottom = 14

[node name="MarginContainer" type="MarginContainer" parent="EditArea/Control/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="RichTextLabel" type="RichTextLabel" parent="EditArea/Control/MarginContainer/MarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/line_separation = 8
theme_override_fonts/normal_font = ExtResource("7_mplpp")
bbcode_enabled = true
text = "[center]Gloop"
fit_content = true

[node name="CardArea" type="NinePatchRect" parent="EditArea"]
self_modulate = Color(0.172549, 0.172549, 0.172549, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.119
anchor_right = 0.5
anchor_bottom = 0.844
offset_left = -104.0
offset_top = 154.704
offset_right = 104.0
offset_bottom = -149.696
mouse_filter = 1
texture = ExtResource("1_1cf1i")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 10
patch_margin_top = 9
patch_margin_right = 14
patch_margin_bottom = 19

[node name="NinePatchRect" type="NinePatchRect" parent="EditArea/CardArea"]
self_modulate = Color(0.059126, 0.0591259, 0.0591259, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(88, 112)
mouse_filter = 1
texture = ExtResource("2_jfs04")
region_rect = Rect2(0, 0, 64, 64)
patch_margin_left = 10
patch_margin_top = 19
patch_margin_right = 14
patch_margin_bottom = 19

[node name="CardSlot" type="Button" parent="EditArea/CardArea/NinePatchRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(72, 96)
focus_mode = 0
mouse_filter = 1
theme_override_styles/hover = SubResource("StyleBoxTexture_omrvp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_hvstn")
theme_override_styles/normal = SubResource("StyleBoxTexture_0n8rc")

[node name="CardPoint" type="Control" parent="EditArea/CardArea/NinePatchRect/CardSlot"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 72.0
offset_top = 96.0
offset_right = -72.0
offset_bottom = -96.0

[node name="ContinueButton" type="Button" parent="EditArea"]
self_modulate = Color(0.207843, 0.207843, 0.207843, 1)
layout_mode = 0
offset_left = 1384.0
offset_top = 768.0
offset_right = 1664.0
offset_bottom = 928.0
focus_mode = 0
theme = ExtResource("3_icw2p")
keep_pressed_outside = true

[node name="Label" type="Label" parent="EditArea/ContinueButton"]
layout_mode = 0
offset_right = 280.0
offset_bottom = 160.0
theme_override_fonts/font = ExtResource("4_nxk2h")
theme_override_font_sizes/font_size = 32
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardCollection" parent="." instance=ExtResource("10_i4r5u")]
position = Vector2(0, 1080)

[node name="BackButton" type="Button" parent="CardCollection"]
self_modulate = Color(0.253238, 0.253238, 0.253238, 1)
offset_left = 64.0
offset_top = 936.0
offset_right = 288.0
offset_bottom = 1056.0
focus_mode = 0
theme = ExtResource("3_icw2p")
keep_pressed_outside = true

[node name="BackLabel" type="Label" parent="CardCollection/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("4_nxk2h")
theme_override_font_sizes/font_size = 32
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="EditArea/CardArea" to="." method="_on_card_slot_mouse_entered"]
[connection signal="mouse_exited" from="EditArea/CardArea" to="." method="_on_card_slot_mouse_exited"]
[connection signal="button_down" from="EditArea/CardArea/NinePatchRect/CardSlot" to="CardEditorSceneManager" method="_on_card_slot_button_down"]
[connection signal="button_up" from="EditArea/CardArea/NinePatchRect/CardSlot" to="CardEditorSceneManager" method="_on_card_slot_button_up"]
[connection signal="mouse_entered" from="EditArea/CardArea/NinePatchRect/CardSlot" to="CardEditorSceneManager" method="_on_card_slot_mouse_entered"]
[connection signal="mouse_exited" from="EditArea/CardArea/NinePatchRect/CardSlot" to="CardEditorSceneManager" method="_on_card_slot_mouse_exited"]
[connection signal="pressed" from="EditArea/ContinueButton" to="CardEditorSceneManager" method="_on_continue_button_pressed"]
[connection signal="pressed" from="CardCollection/BackButton" to="CardEditorSceneManager" method="_on_back_button_pressed"]
